--- a/source/InventorySimulator/lang/zh-Hans.json
+++ b/source/InventorySimulator/lang/zh-Hans.json
@@ -7,5 +7,6 @@
   "invsim.spray_cooldown": "您现在暂时无法使用涂鸦，请等待 {0} 秒后再试。",
   "invsim.login_in_progress": "正在尝试登录您的库存...",
   "invsim.login": "访问 {0} 以查看您的库存。",
-  "invsim.login_failed": "无法登录您的库存，请稍后再试。"
+  "invsim.login_failed": "无法登录您的库存，请稍后再试。",
+  "invsim.roundwin_case": "{gold}{0}{white} 您因赢得本局获得了一个武器箱！"
 }
