--- a/source/InventorySimulator/lang/pt-BR.json
+++ b/source/InventorySimulator/lang/pt-BR.json
@@ -8,5 +8,8 @@
   "invsim.login_in_progress": "Tentando autenticar ao seu inventário...",
   "invsim.login": "Acesse {0} para ver seu inventário.",
   "invsim.login_failed": "Não foi possível autenticar ao seu inventário, tente novamente mais tarde.",
-  "invsim.roundwin_case": "{gold}{0}{white} Você recebeu uma caixa de arma por vencer a rodada!"
+  "invsim.roundwin_case": "{gold}{0}{white} Você recebeu uma caixa de arma por vencer a rodada!",
+  "invsim.last_case_join": "{green}{0}{white} abriu por último {1} e desbloqueou {2}!",
+  "invsim.last_case_unbox_line1": "•• {yellow}{0}{white} abriu um container e encontrou: {2}◆ {2}{1}",
+  "invsim.last_case_unbox_line2": "  {1}{0}"
 }
