--- a/source/InventorySimulator/lang/en.json
+++ b/source/InventorySimulator/lang/en.json
@@ -11,5 +11,7 @@
   "invsim.roundwin_case": "{gold}{0}{white} You received a weapon case for winning the round!",
   "invsim.last_case_join": "{green}{0}{white} last opened {1} and unboxed {2}!",
   "invsim.last_case_unbox_line1": "•• {yellow}{0}{white} has opened a container and found: {2}◆ {2}{1}",
-  "invsim.last_case_unbox_line2": "  {1}{0}"
+  "invsim.last_case_unbox_line2": "  {1}{0}",
+  "invsim.last_stattrak_increment": "•• {yellow}{0}{white} got a StatTrak™ kill with {2}{1}{white} ({3} kills)",
+  "invsim.last_tradeup_line1": "•• {yellow}{0}{white} has completed a trade-up and received: {2}◆ {2}{1}"
 }
