--- a/source/InventorySimulator/lang/zh-Hans.json
+++ b/source/InventorySimulator/lang/zh-Hans.json
@@ -11,5 +11,7 @@
   "invsim.roundwin_case": "{gold}{0}{white} 您因赢得本局获得了一个武器箱！",
   "invsim.last_case_join": "{green}{0}{white} 上次打开了 {1}，开出了 {2}！",
   "invsim.last_case_unbox_line1": "•• {yellow}{0}{white} 打开了容器并发现：{2}◆ {2}{1}",
-  "invsim.last_case_unbox_line2": "  {1}{0}"
+  "invsim.last_case_unbox_line2": "  {1}{0}",
+  "invsim.last_stattrak_increment": "•• {yellow}{0}{white} 使用 StatTrak™ {2}{1}{white} 获得击杀（{3} 杀）",
+  "invsim.last_tradeup_line1": "•• {yellow}{0}{white} 完成了升级合同并获得：{2}◆ {2}{1}"
 }
