feat(lang): updated lang

--- a/source/InventorySimulator/lang/en.json
+++ b/source/InventorySimulator/lang/en.json
@@ -1,14 +1,14 @@
 {
-  "invsim.announce": "Access your inventory at {0}.",
-  "invsim.ws_new": "Your inventory will be refreshed shortly.",
-  "invsim.ws_in_progress": "Your inventory is being refreshed.",
-  "invsim.ws_cooldown": "You cannot refresh your inventory right now. Please wait {0} seconds.",
-  "invsim.ws_completed": "Your inventory have been refreshed.",
-  "invsim.spray_cooldown": "You cannot spray right now. Please wait {0} seconds.",
-  "invsim.login_in_progress": "Trying to authenticate to your inventory...",
-  "invsim.login": "Access {0} to view your inventory.",
-  "invsim.login_failed": "Unable to authenticate to your inventory, please try again later.",
-  "invsim.roundwin_case": "{gold}{0}{white} You received a weapon case for winning the round!",
+  "invsim.announce": "{grey}- {gold}+ HexiumCS2 {gold}+ {grey}- Access your inventory at {red}{0}",
+  "invsim.ws_new": "{grey}- {gold}+ HexiumCS2 {gold}+ {grey}- {yellow}Your inventory will be refreshed shortly.",
+  "invsim.ws_in_progress": "{grey}- {gold}+ HexiumCS2 {gold}+ {grey}- {yellow}Your inventory is being refreshed.",
+  "invsim.ws_cooldown": "{grey}- {gold}+ HexiumCS2 {gold}+ {grey}- {red}You cannot refresh your inventory right now. Please wait {0} seconds.",
+  "invsim.ws_completed": "{grey}- {gold}+ HexiumCS2 {gold}+ {grey}- {green}Your inventory has been refreshed.",
+  "invsim.spray_cooldown": "{grey}- {gold}+ HexiumCS2 {gold}+ {grey}- You cannot spray right now. Please wait {0} seconds.",
+  "invsim.login_in_progress": "{grey}- {gold}+ HexiumCS2 {gold}+ {grey}- Trying to authenticate to your inventory...",
+  "invsim.login": "{grey}- {gold}+ HexiumCS2 {gold}+ {grey}- Access {0} to view your inventory.",
+  "invsim.login_failed": "{grey}- {gold}+ HexiumCS2 {gold}+ {grey}- Unable to authenticate to your inventory, please try again later.",
+  "invsim.roundwin_case": "{grey}- {gold}+ HexiumCS2 {gold}+ {grey}- You received a weapon case for winning the round!",
   "invsim.last_case_join": "{green}{0}{white} last opened {1} and unboxed {2}!",
   "invsim.last_case_unbox_line1": "•• {yellow}{0}{white} has opened a container and found: {2}◆ {2}{1}",
   "invsim.last_case_unbox_line2": "  {1}{0}",
